--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,9 @@
     "@mui/styled-engine-sc": "^6.0.2",
     "axios": "^1.7.7",
     "http-status": "^1.7.4",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "nanoid": "^5.0.8",
     "react": "^18.3.1",
     "react-cookie": "^7.2.1",
     "react-dom": "^18.3.1",
